# internal/httpapi/observability_routes.go
@@ -64,6 +64,8 @@ func (handler *Handler) observabilityHandler(method, resource, identifier string
 	switch {
 	case resource == "core-log-files" && method == http.MethodGet:
 		return handler.listCoreLogFiles
+	case resource == "core-log-files" && method == http.MethodDelete:
+		return handler.deleteCoreLogFile
 	case resource == "core-log-content" && method == http.MethodGet:
 		return func(w http.ResponseWriter, r *http.Request) { handler.readCoreLog(w, r, false) }
 	case resource == "core-log-stream" && method == http.MethodGet:
